table alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,6 @@ h1{
 #error {
     text-align: center;
 }
+td{
+    text-align: justify;
+}
